--- a/app/views/rows/show.html.erb
+++ b/app/views/rows/show.html.erb
@@ -6,7 +6,7 @@
     <p>Nenhum membro na sua PT</p>
   <%else%>
   <div class="flex justify-center content-center gap-6">
-      <div class="border border-black border-2 p-4 h-96 w-40">
+      <div class="border border-black border-2 p-4 h-96 w-60">
         <h2> Ativos</h2>
         <ul>
           <% if @party_members.ativo.nil? %>
@@ -14,9 +14,9 @@
           <% else %>
             <%@party_members.ativo.each do |member| %>
               <li class="flex gap-4"><%= member.user.name %>
-              <% if current_user == @row.user  %>
+              <% if current_user == @row.user && current_user != member.user %>
                 <%= link_to "Excluir", party_member_path(member.id), data: {turbo_method: :delete} %>
-              <% elsif current_user == member.user %>
+              <% elsif current_user == member.user &&  current_user != @row.user %>
                 <%= link_to "Sair da fila", party_member_path(member.id), data: {turbo_method: :delete} %>
               <% end %>
               </li>
@@ -25,7 +25,7 @@
           
         </ul>
       </div>
-      <div class="border border-black border-2 p-4 h-96 w-40">
+      <div class="border border-black border-2 p-4 h-96 w-60">
         <h2>Pendente</h2>
         <ul>
           <%@party_members.pendente.each do |member| %>
